--- a/README.mkd
+++ b/README.mkd
@@ -94,28 +94,71 @@ Which Config Files to Use?
 System Description
 ------------------
 
- * Two computers:
+  * Two computers:
 
-   * Head node: `metal.vrac.iastate.edu`
+    * Head node: `metal.vrac.iastate.edu`
 
-     * On the internal switch, this computer is also known a `192.168.1.20`
+      * On the internal switch, this computer is also known a `192.168.1.20`
 
-     * Contains a single NVIDIA Quadro FX 5800 card.
+      * Contains a single NVIDIA Quadro FX 5800 card.
 
-     * Serves as the main node for controlling the tracker, as well as
-     other peripherals.
+      * Serves as the main node for controlling the tracker, as well as
+      other peripherals.
 
-   * Render node: `metal-render.vrac.iastate.edu`
+    * Render node: `metal-render.vrac.iastate.edu`
 
-     * On the internal switch, this computer is also known a `192.168.1.21`
+      * On the internal switch, this computer is also known a `192.168.1.21`
 
-     * Connected to two NVIDIA Quadro Plex 2200 D2 units, for a total of
-     four NVIDIA Quadro FX 5800 cards (three used, one per wall)
+      * Connected to two NVIDIA Quadro Plex 2200 D2 units, for a total of
+      four NVIDIA Quadro FX 5800 cards (three used, one per wall)
 
- * Projectors: Three Digital Projection Inc. TITAN WUXGA 3D Series II
+  * Projectors: Three Digital Projection Inc. TITAN WUXGA 3D Series II
 
-   * Left wall and floor are 12' x 9', and projected at 1600x1200.
+    * Left wall and floor are 12' x 9', and projected at 1600x1200.
 
-   * Right wall is 9' x 9', projected at 1600x1200 but the right-most
-   and left-most 200 pixels are not visible on the walls.
+    * Right wall is 9' x 9', projected at 1600x1200 but the right-most
+    and left-most 200 pixels are not visible on the walls.
+
+    * Projecting in stereo at 120 Hz, with MacNaughton emitters and
+    XPAN-D X101 stereo glasses.
+
+  * Tracking: [ART TrackPack
+  4](http://www.ar-tracking.de/TrackPack4.254.0.html) system with four
+  cameras.
+
+    * ARTtrack Controller/TP: control computer accessible only on the
+    internal switch, at `192.168.1.22`
+
+    * DTrack tracking data output to both the head node and render node
+    on the traditional port (5000).
+
+    * [DTrack2](http://www.ar-tracking.de/Tracking-software-DTrack2.19.0.html)
+    software (currently version 2.5.0) installed on both nodes, typically
+    run on head node.
+
+    * Targets: [see images of all
+    targets](http://www.ar-tracking.de/Standard-Targets.59+B6Jkw9MA__.0.html)
+
+      * Target 0: Active glasses target attached to stereo glasses
+
+      * Target 1: "Tree" target, screwed on to the front of a Wii Remote
+      to use as a wand
+
+      * Target 2: Small hand target
+
+      * Target 3: Claw target
+
+  * Interaction devices:
+
+    * Wii Remote connecting over Bluetooth to the head node is
+    typically used as a wand (uses an additional jconf)
+
+      * VRPN server with GUI showing battery level, currently-pressed
+      buttons currently used on head node, with AutoIt scripts to
+      automatically complete the pairing-unpairing process required
+      when using a Wii Remote on Windows.
+
+      * Buttons are in the "re-ordered" order - see
+      (https://cvs.cs.unc.edu/git/?p=vrpn.git;a=blob;f=vrpn_WiiMote.h;hb=HEAD)
+      for information.
 
